Remove deprecated method
Signed-off-by: Serene Lim <enerestar@gmail.com>